# deadline-crawler

./: CLAUDE.md  SPEC.md  conferences.yaml  data.yaml  deadlines.json  deadlines.yaml  justfile  labels.yaml  main.py  pyproject.toml  scrapy.cfg
.claude/: settings.local.json
.github/workflows/: crawl.yml  validate.yml
crawler/: compat.py  config.py  labels.py  models.py  ranks.py  strategy.py
crawler/extractors/: __init__.py  css.py  regex.py  xpath.py
crawler/output/: __init__.py  diff.py  generate.py
crawler/strategies/: css.py  llm.py  regex.py  static.py  xpath.py
data/: core2026.csv
deadline_crawler/: extensions.py  items.py  middlewares.py  pipelines.py  settings.py
deadline_crawler/spiders/: conferences.py
memory/: MEMORY.md  project_popl_shepherd.md
output/: deadlines.json  deadlines.yaml
scripts/: check_missing_astar.py
tests/: test_config.py  test_css_strategy.py  test_diff.py  test_fixture_crawl.py  test_regex_strategy.py  test_validate_and_table.py  test_web.py  test_xpath_strategy.py  test_year_flag.py
tests/fixtures/: aaai_2026.html  aaai_2027.html  acl_2026.html  acl_2026_main.html  acm-ccs_2025_main.html  acm-ccs_2026.html  acm-ccs_2026_main.html  acm-ccs_2027_main.html  acm-multimedia_2026.html  acm-multimedia_2026_main.html  acsac_2025.html  acsac_2025_main.html  acsac_2026.html  acsac_2026_main.html  acsac_2027.html  ase_2025.html  ase_2025_main.html  ase_2026.html  ase_2026_main.html  ase_2027.html  ase_2027_main.html  asiaccs_2025.html  asiaccs_2025_main.html  asiaccs_2026.html  asiaccs_2026_main.html  asiacrypt_2026.html  (+248 more)
