[project]
name = "deadline-crawler"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cssselect>=1.4.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::bs4.XMLParsedAsHTMLWarning",
]
